# actions

./: README.md
.github/: main.workflow
.github/workflows/: push.yml
golang/: Dockerfile  entrypoint.sh
hello/: Dockerfile
k8s-image-sync/: Dockerfile  README.md  action.yml  entrypoint.sh
pycodestyle/: Dockerfile  entrypoint.sh
slack-cli/: Dockerfile  Makefile  Pipfile  README.md  action.yml  pyproject.toml  slack-cli.py
