[tool.poetry]
name = "slack-cli"
version = "0.1.0"
description = ""
authors = ["maguowei <imaguowei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slackclient = "^2.9.3"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
